<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gradieint">


    <TextView
        android:id="@+id/select_date_text"
        style="@style/MovieNightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date_text" />

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_date_text"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp" >

        <TextView
            android:id="@+id/date_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_begin"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_end"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_layout"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:weightSum="3">

        <Button
            android:id="@+id/date_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/date_clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_all_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/date_dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dismiss_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>