<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_gradieint">

    <TextView
        android:id="@+id/sort_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_movies_text"
        style="@style/MovieNightTitle"/>

    <LinearLayout
        android:id="@+id/radio_but_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sort_text"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioGroup
            android:id="@+id/type_of_sort_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sort_by_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_popularity_text" />

            <RadioButton
                android:id="@+id/sort_by_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_release_date_text" />

            <RadioButton
                android:id="@+id/sort_by_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_revenue_text" />

            <RadioButton
                android:id="@+id/sort_by_number_of_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_number_of_votes_text" />

            <RadioButton
                android:id="@+id/sort_by_average_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_rating_text" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/order_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/asc_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/ascending_order_text" />

            <RadioButton
                android:id="@+id/desc_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/descending_order_text" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radio_but_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sort_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sort_clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CLEAR ALL"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sort_dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DISMISS"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black" />
    </LinearLayout>




</RelativeLayout>