<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradieint">

    <TextView
        android:id="@+id/min_num_rating_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_minimum_number_of_votes_title"
        style="@style/MovieNightTitle"/>

    <Spinner
        android:id="@+id/number_of_ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/min_num_rating_text_view"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/number_of_ratings"
        android:layout_marginTop="12dp"
        >

        <Button
            android:id="@+id/num_rating_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/num_rating_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_all_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/num_rating_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dismiss_button_text"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</RelativeLayout>